Fix Items endpoint (#219)